--- a/tip-calculator/src/styles/App.scss
+++ b/tip-calculator/src/styles/App.scss
@@ -245,17 +245,19 @@ input[name="custom-button"] {
     height: 100vh;
   }
   .main-ui {
-    border: 2px solid red;
-    max-width: 75vw;
+    //border: 2px solid red;
+    max-width: 60rem;
     display: flex;
     flex-direction: row;
     padding: 1.75rem;
+    margin-top: 2rem;
     border-radius: 1.2rem;
   }
   
   .inputs {
-    border: 2px solid saddlebrown;
+    //border: 2px solid saddlebrown;
     margin: 0 1.5rem 0 0;
+    padding: 0.75rem 1.25rem;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -268,7 +270,7 @@ input[name="custom-button"] {
   }
 
   .results {
-    border: 2px solid blue;
+    //border: 2px solid blue;
     margin-top: 0rem;
     padding: 2.5rem;
     width: 50%;
@@ -289,15 +291,22 @@ input[name="custom-button"] {
 //   }
   
   .input-button-section {
-    //margin: 1.5rem 2.5rem;
-    border: 2px solid purple;
+    // display: flex;
+    // flex-wrap: wrap;
   }
   
   .inputBtn {
+    flex-grow: 0;
     width: 110px;
     margin: 0.25rem 0;
     padding: 0.25rem 0;
   }
+
+  .inputBtn-active {
+    width: 110px;
+    margin: 0.25rem 0;
+    padding: 0.25rem 0;
+}
   
   input[name="custom-button"] {
     margin: 0.25rem 0;
@@ -321,11 +330,12 @@ input[name="custom-button"] {
   }
   
   .result-amount {
-    font-size: 38px;
+    font-size: 42px;
   }
 
-  .resetBtn {
-    margin-top: 8rem;
+  .resetBtn, .resetBtn-active {
+    margin-top: 5rem;
   }
+
 
 }
