--- a/tip-calculator/src/styles/App.scss
+++ b/tip-calculator/src/styles/App.scss
@@ -60,7 +60,6 @@ $btnActiveHover:hsl(173, 61%, 77%);
 $warningColor: #D18F7F;
 
 .App {
-  // border: 2px solid red;
   background-color: $lightGrayishCyan1;
   display: flex;
   flex-direction: column;
@@ -69,8 +68,9 @@ $warningColor: #D18F7F;
   h1{
     color: $veryDarkCyan;
     font-size: 24px;
-    margin: 2rem;
-    // border: 2px solid black;
+    margin: 1rem 0rem;
+    position: relative;
+    top: -80px;
     width: 100px;
     height: 70px;
     text-align: center;
@@ -80,10 +80,10 @@ $warningColor: #D18F7F;
 }
 
 .main-ui {
-  // border: 2px solid yellow;
+  position: relative;
+  top: -80px;
   background-color: $white;
   width: 100vw;
-  padding: 0rem 1.5rem;
   border-radius: 1.2rem 1.2rem 0 0;
 }
 
@@ -278,7 +278,6 @@ input[name="custom-button"] {
     height: 100vh;
   }
   .main-ui {
-    //border: 2px solid red;
     max-width: 60rem;
     display: flex;
     flex-direction: row;
@@ -288,7 +287,6 @@ input[name="custom-button"] {
   }
   
   .inputs {
-    //border: 2px solid saddlebrown;
     margin: 0 1.5rem 0 0;
     padding: 0.75rem 1.25rem;
     width: 50%;
@@ -303,7 +301,6 @@ input[name="custom-button"] {
   }
 
   .results {
-    //border: 2px solid blue;
     margin-top: 0rem;
     padding: 2.5rem;
     width: 50%;
