add useEffect to inputs.js

--- a/tip-calculator/src/styles/App.scss
+++ b/tip-calculator/src/styles/App.scss
@@ -350,5 +350,9 @@ input[name="custom-button"] {
     margin-top: 5rem;
   }
 
-
+// #warning-on {
+//   display: inline;
+//   margin: 0 0 0 3rem;
+//   color: $warningColor;
+// }
 }
