--- a/tip-calculator/src/styles/App.scss
+++ b/tip-calculator/src/styles/App.scss
@@ -65,12 +65,13 @@ $warningColor: #D18F7F;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100%;
   h1{
     color: $veryDarkCyan;
     font-size: 24px;
     margin: 1rem 0rem;
     position: relative;
-    top: -80px;
+    //top: -80px;
     width: 100px;
     height: 70px;
     text-align: center;
@@ -80,11 +81,12 @@ $warningColor: #D18F7F;
 }
 
 .main-ui {
-  position: relative;
-  top: -80px;
+  //position: relative;
+  //top: -100px;
   background-color: $white;
   width: 100vw;
   border-radius: 1.2rem 1.2rem 0 0;
+  padding: 0 0 1rem 0;
 }
 
 //remove increment/decrement buttons from the input fields
@@ -101,7 +103,7 @@ padding: 4px 15px 4px 4px;
 }
 
 .inputs {
-  //margin: 1.5rem 0.5rem;
+  margin: 2rem 1.75rem;
   label, p{
     font-weight: 700;
     color:$darkGrayishCyan1;
@@ -207,7 +209,7 @@ input[name="custom-button"] {
   background-color: $veryDarkCyan;
   color: $lightGrayishCyan2;
   border-radius: 1rem;
-  margin-top: 2rem;
+  margin: 2rem 1rem 1rem 1rem;
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -270,17 +272,18 @@ input[name="custom-button"] {
 
 #warning-on {
   display: inline;
-  margin: 0 0 0 7rem;
+  margin: 0 0 0 2rem;
   color: $warningColor;
 }
 
+//DESKTOP STYLES
 @media only screen and (min-width: 376px) {
   .App {
     display: flex;
     height: 100vh;
   }
   .main-ui {
-    max-width: 60rem;
+    width: 60rem;
     display: flex;
     flex-direction: row;
     padding: 1.75rem;
@@ -303,7 +306,7 @@ input[name="custom-button"] {
   }
 
   .results {
-    margin-top: 0rem;
+    margin: 0rem;
     padding: 2.5rem;
     width: 50%;
   }
@@ -350,9 +353,7 @@ input[name="custom-button"] {
     margin-top: 5rem;
   }
 
-// #warning-on {
-//   display: inline;
-//   margin: 0 0 0 3rem;
-//   color: $warningColor;
-// }
+  #warning-on {
+    margin: 0 0 0 6rem;
+  }
 }
